fixed padding on iphone about

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -560,7 +560,7 @@ footer {
 		display: block;
 	}
 	p {
-		margin: 0 0 40px 0;
+		margin: 0 0 15px 0;
 	}
 }
 
